fix spacing between sparklines

--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -563,14 +563,6 @@ div.sparkline {
     }
 }
 
-.sparklines {
-  div.sparkline {
-    width: auto;
-    float: none;
-    clear: none;
-  }
-}
-
 .widgetpreview-base li.widgetpreview-choosen {
     background: @color-silver-l95;
     position: relative;
